--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
 <html>
-
+https://github.com/acciojob/fill-in-the-blanks-with-placeholder-text-krangadurai/blob/master/main.html
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
@@ -10,8 +10,8 @@
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-		<input id="block_id" placeholder="Enter block id"/>
-  <input id="colour_id" placeholder="Enter colour Hexcode" />
+		<input id="block_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size."/>
+  <input id="colour_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size." />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
 </div>
