--- a/main.html
+++ b/main.html
@@ -10,8 +10,8 @@ https://github.com/acciojob/fill-in-the-blanks-with-placeholder-text-krangadurai
 	<!-- the entire body must be written by student -->
 	<div class="flex-box">
 
-		<input id="block_id" placeholder=" Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size."/>
-  <input id="colour_id" placeholder=" Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size." />
+		<input id="block_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size"/>
+  <input id="colour_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size" />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
 </div>
