--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@ https://github.com/acciojob/fill-in-the-blanks-with-placeholder-text-krangadurai
 <body>
 	<!-- the entire body must be written by student -->
 <div class="flex-box">
-  <input id="block_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size.0"/>
+  <input id="block_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size."/>
   <input id="colour_id" placeholder="Accio ipsum dolor sit amet, join course, solve assignments, get placed above 5 lpa and live life king size." />
   <button id="change_button"  >Change</button>
   <button id="reset_button">Reset</button>
